--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     
-    background-image: url("http://km-webdvlpr.com/Images/avatar2018.jpg"), url("paper.gif");
+    background-image: url("http://tec4th.co.za/images/TEC4thlogo.jpg"), url("paper.gif");
     background-color: #cccccc;
     text-align: center;
 }
